--- a/Main_Cafe.xaml
+++ b/Main_Cafe.xaml
@@ -83,7 +83,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-            
+
         <!--
         <Style x:Key="sticker_test" TargetType="Label">
             <Setter Property="Template">
@@ -320,12 +320,12 @@
             <!--선택한 리스트 영역-->
             <Grid Grid.Row="3" ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="0.95*"/>
-                    <RowDefinition Height="0.05*"/>
+                    <RowDefinition Height="0.88*"/>
+                    <RowDefinition Height="0.12*"/>
                 </Grid.RowDefinitions>
 
                 <Grid Grid.Row="0">
-                    <ListView x:Name="paymentListView" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" SizeChanged="paymentListView_SizeChanged" Grid.ColumnSpan="2" VerticalContentAlignment="Center" >
+                    <ListView x:Name="paymentListView" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" SizeChanged="paymentListView_SizeChanged" VerticalContentAlignment="Center" Height="223" Margin="0,0,-0.4,0" VerticalAlignment="Top" >
                         <ListView.Resources>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -338,8 +338,8 @@
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                                    <TextBlock Text="{Binding ProductName}" FontWeight="Bold"/>
-                                                    <TextBlock Text="{Binding ProductOption}" FontSize="10"/>
+                                                    <TextBlock Text="{Binding ProductName}" FontSize="13" FontWeight="Bold"/>
+                                                    <TextBlock Text="{Binding ProductOption}" FontSize="12"/>
                                                 </StackPanel>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
@@ -357,7 +357,7 @@
                                                             <ImageBrush ImageSource="minus.png"/>
                                                         </Button.Background>
                                                     </Button>
-                                                    <TextBlock  Text="{Binding ProductQuantity}"  Margin="10,0"/>
+                                                    <TextBlock  Text="{Binding ProductQuantity}" FontSize="13" Margin="10,0" FontWeight="Bold"/>
                                                     <Button Height="25" Width="25"   
                                                     Click="BtnPlus_Click" 
                                                     BorderBrush="{x:Null}" 
@@ -375,7 +375,7 @@
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
                                                 <TextBlock HorizontalAlignment="Center"
-                                                       Text="{Binding ProductPrice}" FontWeight="Normal"/>
+                                                       Text="{Binding ProductPrice}" FontSize="13" FontWeight="Bold"/>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
@@ -409,24 +409,12 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Grid Grid.Column="1">
-                        <Button x:Name="btn_listView_Previous" Margin="50,2,5.4,-0.2" Click="btn_listView_Previous_Click">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="50,0,0,50" />
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                    <Grid Grid.Column="1" Margin="60,5,5,5">
+                        <Button x:Name="btn_listView_Previous"  Click="btn_listView_Previous_Click"/>
                     </Grid>
 
-                    <Grid Grid.Column="2">
-                        <Button x:Name="btn_listView_Next" Margin="5,2,50.4,-0.2" Click="btn_listView_Next_Click" Height="11" VerticalAlignment="Top">
-                            <Button.Resources>
-                                <Style TargetType="Border">
-                                    <Setter Property="CornerRadius" Value="0,50,50,0" />
-                                </Style>
-                            </Button.Resources>
-                        </Button>
+                    <Grid Grid.Column="2" Margin="5,5,60,5">
+                        <Button x:Name="btn_listView_Next"  Click="btn_listView_Next_Click"/>
                     </Grid>
                 </Grid>
             </Grid>
@@ -435,7 +423,7 @@
             <!--결제 영역 -->
             <Grid Grid.Row="4">
                 <Border BorderThickness="1" BorderBrush="Black">
-                    <Button Content="결        제" FontWeight="Bold" FontSize="30" Click="BtnPay_Click"/>
+                    <Button x:Name="btn_Pay" Click="BtnPay_Click" BorderBrush="{x:Null}"/>
                 </Border>
             </Grid>
 
